# alt-linux

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  install.sh  main.cpp  package_filter.cpp  package_filter.h
core/: CMakeLists.txt  utils.cpp  utils.h
core/filter/: CMakeLists.txt  package_filter.h  package_version.cpp  package_version.h
core/net/: CMakeLists.txt  http_request.cpp  http_request.h
core/parser/: CMakeLists.txt  package_parser.cpp  package_parser.h  package_version.cpp  package_version.h
tests/: CMakeLists.txt
tests/package_filter/: CMakeLists.txt  package_filter.cpp
tests/parser/: CMakeLists.txt  package_parser.cpp
